[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/ui/button_disabled.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/fredoka/fredoka_regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/fredoka_one.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/ui/rpgiab_icon_pack_v1.2/16x16/map.png" type="Texture" id=5]
[ext_resource path="res://src/mainold.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/rpgiab_icon_pack_v1.2/16x16/add.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/rpgiab_icon_pack_v1.2/16x16/folder_page.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.933333, 0.933333, 0.933333, 1 )

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[node name="Main" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
script = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.760784, 0.760784, 0.760784, 1 )
custom_fonts/font = SubResource( 1 )
text = "sunaba"
align = 1
valign = 1

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -253.5
margin_top = -196.5
margin_right = 253.5
margin_bottom = 196.5
rect_min_size = Vector2( 300, 105 )
theme = ExtResource( 2 )
window_title = "Open a File"
mode = 0
access = 2

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.0
margin_top = -144.5
margin_right = 177.0
margin_bottom = 144.5

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
margin_left = 9.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
text = "Sunaba"

[node name="IPAddress" type="LineEdit" parent="Panel"]
anchor_right = 1.0
margin_left = 12.0
margin_top = 52.0
margin_right = -12.0
margin_bottom = 84.0
placeholder_text = "IP Address"

[node name="FileButton" type="Button" parent="Panel"]
margin_left = 316.0
margin_top = 92.0
margin_right = 342.0
margin_bottom = 124.0
icon = ExtResource( 8 )

[node name="JoinButton" type="Button" parent="Panel"]
margin_left = 248.0
margin_top = 244.0
margin_right = 342.0
margin_bottom = 276.0
text = "Join"

[node name="HostButton" type="Button" parent="Panel"]
margin_left = 143.0
margin_top = 243.5
margin_right = 237.0
margin_bottom = 275.5
text = "Host"

[node name="TextBox" type="Panel" parent="Panel"]
margin_left = 13.0
margin_top = 93.0
margin_right = 313.0
margin_bottom = 124.0
custom_styles/panel = ExtResource( 1 )

[node name="Label" type="Label" parent="Panel/TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
text = "Insert \".sbg\" file here"
valign = 1

[node name="Panel2" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 35.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2"]
anchor_bottom = 1.0

[node name="Button" type="MenuButton" parent="Panel2/HBoxContainer"]
margin_right = 48.0
margin_bottom = 35.0
text = "Game"
items = [ "New Game", ExtResource( 7 ), 0, false, false, 0, 0, null, "", false ]

[node name="Button2" type="MenuButton" parent="Panel2/HBoxContainer"]
margin_left = 52.0
margin_right = 99.0
margin_bottom = 35.0
focus_mode = 2
text = "Editor"
items = [ "Map Editor", ExtResource( 5 ), 0, false, false, 0, 0, null, "", false ]

[connection signal="file_selected" from="FileDialog" to="." method="_open_file"]
[connection signal="text_changed" from="Panel/IPAddress" to="." method="on_ip_address_changed"]
[connection signal="pressed" from="Panel/FileButton" to="." method="on_file_button_pressed"]
[connection signal="pressed" from="Panel/JoinButton" to="." method="join_game"]
[connection signal="pressed" from="Panel/HostButton" to="." method="host_game"]
